--- a/Exo1/html/index.html
+++ b/Exo1/html/index.html
@@ -26,102 +26,100 @@
                             <img src="../images/tasse_the.jpg" alt="Tasses de thé.">
                             <img src="../images/h2.png" alt="Des thés rares et exceptionnels récoltés au bout du monde.">
                             <figcaption>
-                                <a href="#" alt="Découvrir nos thés." class="green">> Découvrir nos thés</a>
+                                <a href="#" alt="Découvrir nos thés.">> Découvrir nos thés</a>
                             </figcaption>
                         </figure>
+                        <div class="header_text">
+                            <article>
+                                <img src="../images/icone1.jpg" alt="Icone-1">
+                                <h2>75 variétés de thé</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, inventore, est. Quidem delectus, accusantium cum dolores consequuntur autem dignissimos corrupti accusamus. Quia minus quibusdam soluta cumque, odit laudantium rem, alias.</p>
+                            </article>
 
-                        <article>
-                            <img src="../images/icone1.jpg" alt="Icone-1">
-                            <h2>75 variétés de thé</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, inventore, est. Quidem delectus, accusantium cum dolores consequuntur autem dignissimos corrupti accusamus. Quia minus quibusdam soluta cumque, odit laudantium rem, alias. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit recusandae distinctio quia ab qui voluptas porro rem saepe non nulla dolores, nemo nobis autem tempora tempore voluptates, eligendi ullam quos.</p>
-                        </article>
+                            <article>
+                                <img src="../images/icone2.jpg" alt="Icone-2">
+                                <h2>Des thés de Chine</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, inventore, est. Quidem delectus, accusantium cum dolores consequuntur autem dignissimos corrupti accusamus.</p>
+                            </article>
 
-                        <article>
-                            <img src="../images/icone2.jpg" alt="Icone-2">
-                            <h2>Des thés de Chine</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, inventore, est. Quidem delectus, accusantium cum dolores consequuntur autem dignissimos corrupti accusamus. Quia minus quibusdam soluta cumque, odit laudantium rem, alias. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit recusandae distinctio quia ab qui voluptas porro rem saepe non nulla dolores</p>
-                        </article>
-
-                        <article>
-                            <img src="../images/icone3.jpg" alt="Icone-3">
-                            <h2>Des conseils détente</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, inventore, est. Quidem delectus, accusantium cum dolores consequuntur autem dignissimos corrupti accusamus. Quia minus quibusdam soluta cumque, odit laudantium rem, alias. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit recusandae distinctio quia ab qui voluptas porro rem saepe non nulla dolores, nemo nobis autem tempora tempore voluptates, eligendi ullam quos.</p>
-                        </article>
+                            <article>
+                                <img src="../images/icone3.jpg" alt="Icone-3">
+                                <h2>Des conseils détente</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, inventore, est. Quidem delectus, accusantium cum dolores consequuntur autem dignissimos corrupti accusamus. Quia minus quibusdam soluta cumque, odit laudantium rem, alias.</p>
+                            </article>
+                        </div>
                     </section>
                 </div>
-            <aside>
-                <h2>Dernieres actualites</h2>
-                <article>
-                    <div>
-                        <img src="../images/bg_date.png" alt="Background">
-                        <p><span>01</span><br />jan</p>
-                    </div>
-                    <div>
-                        <h3>Ouverure du nouveau Real Tea à Strasbourg</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos voluptates dolore itaque facere tenetur odio officia unde, aut mollitia fugiat, voluptatem praesentium, excepturi ex soluta.!</p>
-                        <a href="#">Lire la suite</a>
-                    </div>
-                </article>
+            <div class="actu">
+                <aside class="article">
+                    <article>
+                        <div>
+                            <p><span>01</span><br />jan</p>
+                        </div>
+                        <div>
+                            <h3>Ouverture du nouveau Real Tea à Strasbourg</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos voluptates dolore itaque</p>
+                            <a href="#">Lire la suite</a>
+                        </div>
+                    </article>
 
-                <article>
-                    <div>
-                        <img src="../images/bg_date.png" alt="Background">
-                        <p><span>30</span><br />déc</p>
-                    </div>
-                    <div>
-                        <h3>Ouverure du nouveau Real Tea à Strasbourg</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos voluptates dolore itaque facere tenetur odio officia unde, aut mollitia fugiat, voluptatem praesentium, excepturi ex soluta.!</p>
-                        <a href="#">Lire la suite</a>
-                    </div>
-                </article>
+                    <article>
+                        <div>
+                            <p><span>30</span><br />déc</p>
+                        </div>
+                        <div>
+                            <h3>Ouverture du nouveau Real Tea à Strasbourg</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos voluptates dolore itaque</p>
+                            <a href="#">Lire la suite</a>
+                        </div>
+                    </article>
 
-                <article>
-                    <div>
-                        <img src="../images/bg_date.png" alt="Background">
-                        <p><span>14</span><br />déc</p>
-                    </div>
-                    <div>
-                        <h3>Ouverure du nouveau Real Tea à Strasbourg</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos voluptates dolore itaque facere tenetur odio officia unde, aut mollitia fugiat, voluptatem praesentium, excepturi ex soluta.!</p>
-                        <a href="#">Lire la suite</a>
-                    </div>
-                </article>
-            </aside>
+                    <article>
+                        <div>
+                            <p><span>14</span><br />déc</p>
+                        </div>
+                        <div>
+                            <h3>Ouverture du nouveau Real Tea à Strasbourg</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos voluptates dolore itaque</p>
+                            <a href="#">Lire la suite</a>
+                        </div>
+                    </article>
+                </aside>
 
-            <section>
-                <div>
-                    <h2>Trouvez nos espaces thés</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis quidem tenetur nobis quisquam.</p>
+                <section class="info">
                     <div>
-                        <ul>
-                            <li>Strasbourg</li>
-                            <li>Lyon</li>
-                            <li>Marseille</li>
-                        </ul>
+                        <h2>Trouvez nos espaces thés</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis quidem tenetur nobis quisquam.</p>
+                        <div>
+                            <ul>
+                                <li>Strasbourg</li>
+                                <li>Lyon</li>
+                                <li>Marseille</li>
+                            </ul>
+                        </div>
+
+                        <div>
+                            <ul>
+                                <li>Paris</li>
+                                <li>Rennes</li>
+                                <li>Bordeaux</li>
+                            </ul>
+                        </div>
                     </div>
 
                     <div>
-                        <ul>
-                            <li>Paris</li>
-                            <li>Rennes</li>
-                            <li>Bordeaux</li>
-                        </ul>
+                        <h2>Newsletter</h2>
+                        <p>Ne loupez pas le meilleur de l'actualité du thé et de Real Tea !</p>
+                        <div>
+                            <form action="#">
+                                <input type="text" placeholder="Mon adress email">
+                                <input type="submit" value="Je m'inscris">
+                            </form>
+                            <img src="../images/pot_newsletter.png" alt="Boite de thé">
+                        </div>
                     </div>
-                </div>
-
-                <div>
-                    <h2>Newsletter</h2>
-                    <p>Ne loupez pas le meilleur de l'actualité du thé et de Real Tea !</p>
-                    <div>
-                        <form action="#">
-                            <input type="text" placeholder="Mon adress email">
-                            <input type="submit" value="Je m'inscris">
-                        </form>
-                        <img src="../images/pot_newsletter.png" alt="Boite de thé">
-                    </div>
-                </div>
-            </section>
-
+                </section>
+            </div>
             <footer>
                 <div>
                     <p>Retrouvez-nous aussi sur : </p>
