--- a/Exo1/html/index.html
+++ b/Exo1/html/index.html
@@ -89,7 +89,8 @@
                 <section class="info">
                     <div>
                         <h2>Trouvez nos espaces thés</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis quidem tenetur nobis quisquam.</p>
+                        <img src="../images/bg_titre.jpg" alt="border">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipi  a  a z  ef dsf fdg sicing elit. ndis quidem tenetur nobis</p>
                         <div>
                             <ul>
                                 <li>Strasbourg</li>
@@ -109,13 +110,14 @@
 
                     <div>
                         <h2>Newsletter</h2>
+                        <img src="../images/bg_titre.jpg" alt="border">
                         <p>Ne loupez pas le meilleur de l'actualité du thé et de Real Tea !</p>
                         <div>
                             <form action="#">
-                                <input type="text" placeholder="Mon adress email">
+                                <input type="text" placeholder="Mon adresse email">
                                 <input type="submit" value="Je m'inscris">
                             </form>
-                            <img src="../images/pot_newsletter.png" alt="Boite de thé">
+<!--                            <img src="../images/pot_newsletter.png" alt="Boite de thé">-->
                         </div>
                     </div>
                 </section>
