--- a/Exo2/html/index.html
+++ b/Exo2/html/index.html
@@ -76,29 +76,32 @@
                     </div>
                 </section>
             </main>
-               
+        </div>
+        <div class="container-2">
             <footer>
-                <div>
-                    <div>
+                <div class="div-footer">
+                    <div class="footer-1">
                         <h3>Contact us</h3>
                         <div>
                             <img src="../img/footer-logo.png" alt="logo">
-                            <p><span>Wonder Bunker</span><br/>6064 Amazing St,<br/>Madrid, Spain</p>
+                            <p><span>Wonder Bunker</span></p>
+                            <p>6064 Amazing St,</p>
+                            <p>Madrid, Spain</p>
                             <img src="../img/social-icons.png" alt="icon-1">
                             <img src="../img/social-icons.png" alt="icon-2">
                             <img src="../img/social-icons.png" alt="icon-3">
                             <img src="../img/social-icons.png" alt="icon-4">
                         </div>
                     </div>
-                    <div>
+                    <div class="footer-2">
                         <h3>Lattest tweets</h3>
                         <div>
-                            <p>@Basicoh_ Hey! Buy this beautiful theme right now!.</p>
-                            <p>@Basicoh_ Wonder Theme is out Now! You can buy it in Wrapbootstrap.com Really easy to configure with a wonderful design.</p>
-                            <p>@Basicoh_ If you are an agency, freelancer or a studio, this theme is made for you. Take a look and enjoy it.</p>
+                            <p><span>@Basicoh_</span> Hey! Buy this beautiful theme right now!.</p>
+                            <p><span>@Basicoh_</span> Wonder Theme is out Now! You can buy it in Wrapbootstrap.com Really easy to configure with a wonderful design.</p>
+                            <p><span>@Basicoh_</span> If you are an agency, freelancer or a studio, this theme is made for you. Take a look and enjoy it.</p>
                         </div>
                     </div>
-                    <div>
+                    <div class="footer-3">
                         <h3>Latest posts</h3>
                         <div>
                             <p>Example post number 1</p>
@@ -107,7 +110,7 @@
                             <p>Yet another post title for this list</p>
                         </div>
                     </div>
-                    <div>
+                    <div class="footer-4">
                         <h3>Flickr photos</h3>
                         <div>
                             <img src="../img/flickr/1.jpg" alt="flickr-1">
