image du bas + hover

--- a/Exo2/html/index.html
+++ b/Exo2/html/index.html
@@ -87,10 +87,12 @@
                             <p><span>Wonder Bunker</span></p>
                             <p>6064 Amazing St,</p>
                             <p>Madrid, Spain</p>
-                            <img src="../img/social-icons.png" alt="icon-1">
-                            <img src="../img/social-icons.png" alt="icon-2">
-                            <img src="../img/social-icons.png" alt="icon-3">
-                            <img src="../img/social-icons.png" alt="icon-4">
+                            <ul class="icon">
+                                <li class="icon-1"></li>
+                                <li class="icon-2"></li>
+                                <li class="icon-3"></li>
+                                <li class="icon-4"></li>
+                            </ul>
                         </div>
                     </div>
                     <div class="footer-2">
