--- a/Exo2/html/index.html
+++ b/Exo2/html/index.html
@@ -130,9 +130,9 @@
                         </div>
                     </div>
                 </div>
-                <div>
-                    <span>Copyright 2012 Wonder Theme.All rights reserved.</span>
-                    <span>Home Features Gallery Blog Contact</span>
+                <div class="end-footer">
+                    <span class="left">Copyright 2012 Wonder Theme.All rights reserved.</span>
+                    <span class="right">Home Features Gallery Blog Contact</span>
                 </div>
             </footer>
         </div>
