--- a/Exo2/html/index.html
+++ b/Exo2/html/index.html
@@ -128,7 +128,7 @@
                         </div>
                     </div>
                 </div>
-                <div>
+                <div class="foofooter">
                     <span>Copyright 2012 Wonder Theme.All rights reserved.</span>
                     <span>Home Features Gallery Blog Contact</span>
                 </div>
